--- a/Day47.ipynb
+++ b/Day47.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPoXMsLu1OChuRszEeor12g",
+      "authorship_tag": "ABX9TyPa/1K+mIPOxqwSx3LiufqF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,128 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**What is Deep Learning?**\n",
+        "\n",
+        "- What is Deep Learning?\n",
+        "\n",
+        "  - Subset of Machine Learning that uses artificial neural networks(ANN)with multiple layers(deep architectures)to model and learn complex patterns in data\n",
+        "\n",
+        "  - Key Feature\n",
+        "\n",
+        "    - Automatically extracts relevant features from raw data, eliminating the need for manual feature engineering\n",
+        "\n",
+        "  Machine Learning VS Deep Learning\n",
+        "| Feature | Machine Learning | Deep Learning |\n",
+        "|----------|----------|----------|\n",
+        "| feature Engineering | Manual feature selection  | Automatic feature extraction |\n",
+        "| Algorithms | Linear Regression, SVM, etc | Neural Networks  |\n",
+        "| Data Dependency | Works well with small datasets  | Requires large datasets |\n",
+        "| Computation | Computationally less intensive | Requires GPUs/TPUs for Training |\n"
+      ],
+      "metadata": {
+        "id": "98uAH01vAG9F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Overview of Artificial Neural Networks(ANN)**\n",
+        "\n",
+        "- Structure of a Neural Network\n",
+        "\n",
+        "  - Input Layer\n",
+        "\n",
+        "    - Accepts input data features\n",
+        "\n",
+        "  - Hidden layers\n",
+        "\n",
+        "    - Perform computations to extracts patterns\n",
+        "\n",
+        "  - Output Layer\n",
+        "\n",
+        "    - Produces predictions or classification\n",
+        "\n",
+        "- Key Components\n",
+        "\n",
+        "  - Neurons\n",
+        "\n",
+        "    - Basic units of computation that take inputs, apply weights and biases, and produce outputs using an activation function\n",
+        "\n",
+        "  - Weights and Biases\n",
+        "\n",
+        "    - Weights determine the importance of each input\n",
+        "\n",
+        "    - Bias shifts the output of the activation function\n",
+        "\n",
+        "  - Activation functions\n",
+        "\n",
+        "    - Add Non-Linearity to the model(Ex: ReLU, Sigmoid, Tanh)  "
+      ],
+      "metadata": {
+        "id": "jrBKPyfaCyyC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Overview of ANN**\n",
+        "\n",
+        "- How Neural Networks work\n",
+        "\n",
+        "  - Forward Propagation\n",
+        "\n",
+        "    - Data Flows through the network to generate predictions\n",
+        "\n",
+        "  - Loss Calculation\n",
+        "\n",
+        "    - Compares predictions with actual labels to compute the error\n",
+        "\n",
+        "  - Backpropagation\n",
+        "\n",
+        "    - Adjust weights and biases using Gradient Descent to minimize the loss"
+      ],
+      "metadata": {
+        "id": "PHGn8aH8EYxH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Applications of Deep Learning**\n",
+        "\n",
+        "- Domains and usecases\n",
+        "\n",
+        "  - Computer Vision\n",
+        "\n",
+        "    - Image Classification(EX: Recognizing objects in images)\n",
+        "\n",
+        "    - Object detection(EX: Autonomous vehicles)\n",
+        "\n",
+        "  - Natural Language Processing(NLP)\n",
+        "\n",
+        "    - Text Generation(EX: GPT Models)\n",
+        "\n",
+        "    - Sentiment Analysis\n",
+        "\n",
+        "  - Healthcare\n",
+        "\n",
+        "    - Disease diagnosis(EX: Identifying tumors in X-Rays)\n",
+        "\n",
+        "    - Drug discovery\n",
+        "\n",
+        "  - Speech processing\n",
+        "\n",
+        "    - Speech-to-text systems(EX: Virtual assistants)\n",
+        "\n",
+        "    - Voice recognition"
+      ],
+      "metadata": {
+        "id": "KGMEzUTdE9TU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Objective**\n",
         "\n",
         "- Familiarize yourself with common datasets in deep learning and setup an environment to work with Tensorflow or PyTorch\n",
@@ -66,7 +188,7 @@
         "id": "jcH6xPKPZUbY",
         "outputId": "53e435bd-b7c8-45cd-c3c1-ea25f2082955"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +278,7 @@
         "id": "MnLZ0XzGXtDr",
         "outputId": "2141757b-eae6-4970-c3d9-43786c28fe93"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
