--- a/Day103.ipynb
+++ b/Day103.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPoz98BajGnCwPFrIB0ocBM",
+      "authorship_tag": "ABX9TyMnPA2mqqq4c1ib+NG9NIMt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,34 +68,44 @@
         "predictions = model.predict(X_test)\n",
         "\n",
         "# Display predictions\n",
-        "print(\"Predictions:\", predictions)"
+        "print(\"Predictions: \\n\", predictions)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ufH6PZcRNJax",
-        "outputId": "e365ef32-85ce-4df6-97c7-fa1e2013214a"
+        "outputId": "cd185106-bf9e-4733-9b7c-0fa7c0c3c8ef"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Predictions: [ 1  1  1  1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-            "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1  1  1  1\n",
-            "  1  1  1  1  1  1  1  1  1 -1  1 -1  1  1  1  1  1  1  1 -1 -1  1  1  1\n",
-            "  1 -1  1  1  1  1  1  1  1  1  1  1 -1 -1  1  1  1  1  1  1  1  1  1  1\n",
-            " -1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1\n",
-            "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1\n",
-            "  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1 -1\n",
-            " -1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1 -1 -1  1  1  1  1  1  1\n",
-            "  1  1  1  1 -1  1  1  1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
+            "Predictions: \n",
+            " [ 1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1\n",
+            "  1  1  1  1  1 -1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1 -1\n",
+            " -1  1  1  1  1 -1  1  1  1  1  1  1 -1  1  1  1 -1  1  1  1  1  1  1  1\n",
+            "  1  1  1  1  1  1  1  1  1 -1  1  1 -1  1  1  1  1  1  1  1 -1  1  1  1\n",
+            "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
+            "  1  1  1 -1  1  1  1  1  1 -1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1\n",
+            "  1  1  1 -1 -1  1  1  1  1 -1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1\n",
+            "  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1 -1  1  1  1  1  1  1  1\n",
+            " -1  1  1  1  1  1  1  1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
             " -1 -1 -1 -1]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zg5jQJyTNiA1"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
