--- a/Day107.ipynb
+++ b/Day107.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhubBUnuZVTjzJv8DSU/9/",
+      "authorship_tag": "ABX9TyNKcLa/CFU225Kx+EMJ1Ifu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
         "\n",
         "# Define the RNN model\n",
         "model = models.Sequential([\n",
-        "    layers.Embedding(max_features, 32, input_length=max_len),\n",
+        "    layers.Embedding(max_features, 32),\n",
         "    layers.SimpleRNN(32),\n",
         "    layers.Dense(1, activation='sigmoid')\n",
         "])\n",
@@ -85,42 +85,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eIco97_KT9LN",
-        "outputId": "5f27ad1c-9bc1-4f95-f588-7a13db88ccc4"
+        "outputId": "c2ba5f56-3735-4419-ff5a-db1d378a517f"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb.npz\n",
-            "\u001b[1m17464789/17464789\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n",
-            "Epoch 1/5\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/core/embedding.py:97: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 136ms/step - accuracy: 0.6092 - loss: 0.6348 - val_accuracy: 0.8046 - val_loss: 0.4422\n",
+            "Epoch 1/5\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 135ms/step - accuracy: 0.5591 - loss: 0.6773 - val_accuracy: 0.7460 - val_loss: 0.5356\n",
             "Epoch 2/5\n",
-            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 139ms/step - accuracy: 0.8407 - loss: 0.3822 - val_accuracy: 0.5970 - val_loss: 0.6454\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m82s\u001b[0m 135ms/step - accuracy: 0.8068 - loss: 0.4372 - val_accuracy: 0.7992 - val_loss: 0.4566\n",
             "Epoch 3/5\n",
-            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 134ms/step - accuracy: 0.7869 - loss: 0.4668 - val_accuracy: 0.8162 - val_loss: 0.4685\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m43s\u001b[0m 136ms/step - accuracy: 0.8766 - loss: 0.3011 - val_accuracy: 0.7942 - val_loss: 0.4843\n",
             "Epoch 4/5\n",
-            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m83s\u001b[0m 138ms/step - accuracy: 0.8503 - loss: 0.3521 - val_accuracy: 0.8004 - val_loss: 0.4564\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m43s\u001b[0m 136ms/step - accuracy: 0.9496 - loss: 0.1486 - val_accuracy: 0.8028 - val_loss: 0.5545\n",
             "Epoch 5/5\n",
-            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m80s\u001b[0m 133ms/step - accuracy: 0.9241 - loss: 0.2009 - val_accuracy: 0.6968 - val_loss: 0.6768\n",
-            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 27ms/step - accuracy: 0.6903 - loss: 0.6846\n",
-            "Test accuracy: 0.6912800073623657\n"
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m82s\u001b[0m 138ms/step - accuracy: 0.9809 - loss: 0.0687 - val_accuracy: 0.7636 - val_loss: 0.6968\n",
+            "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 27ms/step - accuracy: 0.7616 - loss: 0.7118\n",
+            "Test accuracy: 0.7648000121116638\n"
           ]
         }
       ]
