--- a/Day114.ipynb
+++ b/Day114.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmb77KqhObJheKP2rfugD8",
+      "authorship_tag": "ABX9TyND3+2lGs7eSCgETw4JXO68",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,19 +29,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Tensor Operations"
+        "# Constants, Variables and Placeholders"
       ],
       "metadata": {
-        "id": "1FbFwBo_fqKt"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Arithmetic Operations**\n"
-      ],
-      "metadata": {
-        "id": "gZCA6VaIftEU"
+        "id": "ZdIEmvQ-zLLz"
       }
     },
     {
@@ -49,189 +40,82 @@
       "source": [
         "import tensorflow as tf\n",
         "\n",
-        "# Create Tensors\n",
-        "tensor_a = tf.constant([[1, 2], [3, 4]], dtype=tf.float32)\n",
-        "tensor_b = tf.constant([[5, 6], [7, 8]], dtype=tf.float32) # Changed to float32\n",
+        "## Cnstants\n",
         "\n",
-        "# Addition\n",
-        "add_result = tf.add(tensor_a, tensor_b)\n",
+        "# Create a constant tensor\n",
+        "constant_tensor = tf.constant([1, 2, 3, 4, 5])\n",
         "\n",
-        "# Subtraction\n",
-        "sub_result = tf.subtract(tensor_a, tensor_b)\n",
+        "print(\"Constant Tensor: \\n\", constant_tensor)\n",
         "\n",
-        "# Multiplication\n",
-        "mul_result = tf.multiply(tensor_a, tensor_b)\n",
+        "## Variables\n",
         "\n",
-        "# Division\n",
-        "div_result = tf.divide(tensor_a, tensor_b)\n",
+        "# Create a variable tensor with initial values\n",
+        "initial_values = tf.random.normal(shape=(3, 3))\n",
+        "variable_tensor = tf.Variable(initial_values)\n",
         "\n",
-        "print(\"Tensor A: \\n\", tensor_a)\n",
-        "print(\"Tensor B: \\n\", tensor_b)\n",
-        "print(\"Addition Result: \\n\", add_result)\n",
-        "print(\"Subtraction Result: \\n\", sub_result)\n",
-        "print(\"Multiplication Result: \\n\", mul_result)\n",
-        "print(\"Division Result: \\n\", div_result)\n",
+        "print(\"Variable tensor: \\n\", variable_tensor)\n",
         "\n",
-        "## Mathematical functions\n",
+        "# Update variable tensor\n",
+        "new_values = tf.random.normal(shape=(3, 3))\n",
+        "variable_tensor.assign(new_values)\n",
         "\n",
-        "# Square\n",
-        "square_result = tf.square(tensor_a)\n",
+        "print(\"Updated variable tensor: \\n\", variable_tensor)\n",
         "\n",
-        "# Square Root\n",
-        "sqrt_result = tf.sqrt(tensor_a)\n",
+        "## TensorFlow 2.x Approach\n",
         "\n",
-        "# Exponential\n",
-        "exp_result = tf.exp(tensor_a)\n",
+        "# TensorFlow 2.x approach\n",
+        "x = tf.constant([[1.0, 2.0, 3.0,], [4.0, 5.0, 6.0]])\n",
         "\n",
-        "# Logaritm\n",
-        "log_result = tf.math.log(tensor_a)\n",
+        "print(x)\n",
         "\n",
-        "print(\"Square Result: \\n\", square_result)\n",
-        "print(\"Square Root Result: \\n\", sqrt_result)\n",
-        "print(\"Exponential Result: \\n\", exp_result)\n",
-        "print(\"Logarithmic Result: \\n\", log_result)\n",
+        "# Direct computation without placeholders\n",
+        "y = tf.square(x)\n",
         "\n",
-        "## Reduction Operations\n",
-        "\n",
-        "# Sum along axis\n",
-        "result_sum = tf.reduce_sum(tensor_a, axis=0)\n",
-        "\n",
-        "# Mean along axis\n",
-        "result_mean = tf.reduce_mean(tensor_a)\n",
-        "\n",
-        "# Maximum value\n",
-        "result_max = tf.reduce_max(tensor_a)\n",
-        "\n",
-        "# Minimum value\n",
-        "result_min = tf.reduce_min(tensor_a)\n",
-        "\n",
-        "print(\"Sum Result: \\n\", result_sum)\n",
-        "print(\"Mean Result: \\n\", result_mean)\n",
-        "print(\"Maximum Result: \\n\", result_max)\n",
-        "print(\"Minimum Result: \\n\", result_min)\n",
-        "\n",
-        "## Matrix Operations\n",
-        "\n",
-        "# Matrix Multiplication\n",
-        "result_matmul = tf.matmul(tensor_a, tensor_b)\n",
-        "\n",
-        "# Matrix Transportation\n",
-        "result_transpose = tf.transpose(tensor_a)\n",
-        "\n",
-        "# Matrix Inverse(Requires TensorFlow Addons)\n",
-        "result_inverse = tf.linalg.inv(tensor_a)\n",
-        "\n",
-        "print(\"Matrix Multiplication Result: \\n\", result_matmul)\n",
-        "print(\"Matrix Transpose Result: \\n\", result_transpose)\n",
-        "print(\"Inverse Result: \\n\", result_inverse)\n",
-        "\n",
-        "## Indexing and Slicing\n",
-        "\n",
-        "# Accessing Specific element\n",
-        "\n",
-        "element = tensor_a[0, 0]\n",
-        "\n",
-        "# Slicing\n",
-        "slice_tensor = tensor_a[:, 1]\n",
-        "\n",
-        "print(\"Specific Element: \\n\", element)\n",
-        "print(\"Sliced Tensor: \\n\", slice_tensor)\n",
-        "\n",
-        "## Broadcasting\n",
-        "\n",
-        "# Broadcasting in arithemetic operations\n",
-        "tensor_c = tf.constant([1, 2], dtype=tf.float32) # Added dtype=tf.float32\n",
-        "result_broadcast = tensor_a + tensor_c #  TensorFLow is broadcasted to match the shape of tensor_a\n",
-        "\n",
-        "print(\"Tensor: \\n\", tensor_c)\n",
-        "print(\"Broadcasted Result: \\n\", result_broadcast)"
+        "print(y)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "E43E9RFcf_6p",
-        "outputId": "f3142b77-905e-4534-f15d-10633b95833b"
+        "id": "FKeHXcBEzeQL",
+        "outputId": "e08b160e-9fe4-4a0b-d2d9-fd533851bac0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tensor A: \n",
-            " tf.Tensor(\n",
-            "[[1. 2.]\n",
-            " [3. 4.]], shape=(2, 2), dtype=float32)\n",
-            "Tensor B: \n",
-            " tf.Tensor(\n",
-            "[[5. 6.]\n",
-            " [7. 8.]], shape=(2, 2), dtype=float32)\n",
-            "Addition Result: \n",
-            " tf.Tensor(\n",
-            "[[ 6.  8.]\n",
-            " [10. 12.]], shape=(2, 2), dtype=float32)\n",
-            "Subtraction Result: \n",
-            " tf.Tensor(\n",
-            "[[-4. -4.]\n",
-            " [-4. -4.]], shape=(2, 2), dtype=float32)\n",
-            "Multiplication Result: \n",
-            " tf.Tensor(\n",
-            "[[ 5. 12.]\n",
-            " [21. 32.]], shape=(2, 2), dtype=float32)\n",
-            "Division Result: \n",
-            " tf.Tensor(\n",
-            "[[0.2        0.33333334]\n",
-            " [0.42857143 0.5       ]], shape=(2, 2), dtype=float32)\n",
-            "Square Result: \n",
-            " tf.Tensor(\n",
-            "[[ 1.  4.]\n",
-            " [ 9. 16.]], shape=(2, 2), dtype=float32)\n",
-            "Square Root Result: \n",
-            " tf.Tensor(\n",
-            "[[1.        1.4142135]\n",
-            " [1.7320508 2.       ]], shape=(2, 2), dtype=float32)\n",
-            "Exponential Result: \n",
-            " tf.Tensor(\n",
-            "[[ 2.7182817  7.389056 ]\n",
-            " [20.085537  54.59815  ]], shape=(2, 2), dtype=float32)\n",
-            "Logarithmic Result: \n",
-            " tf.Tensor(\n",
-            "[[0.        0.6931472]\n",
-            " [1.0986123 1.3862944]], shape=(2, 2), dtype=float32)\n",
-            "Sum Result: \n",
-            " tf.Tensor([4. 6.], shape=(2,), dtype=float32)\n",
-            "Mean Result: \n",
-            " tf.Tensor(2.5, shape=(), dtype=float32)\n",
-            "Maximum Result: \n",
-            " tf.Tensor(4.0, shape=(), dtype=float32)\n",
-            "Minimum Result: \n",
-            " tf.Tensor(1.0, shape=(), dtype=float32)\n",
-            "Matrix Multiplication Result: \n",
-            " tf.Tensor(\n",
-            "[[19. 22.]\n",
-            " [43. 50.]], shape=(2, 2), dtype=float32)\n",
-            "Matrix Transpose Result: \n",
-            " tf.Tensor(\n",
-            "[[1. 3.]\n",
-            " [2. 4.]], shape=(2, 2), dtype=float32)\n",
-            "Inverse Result: \n",
-            " tf.Tensor(\n",
-            "[[-2.0000002   1.0000001 ]\n",
-            " [ 1.5000001  -0.50000006]], shape=(2, 2), dtype=float32)\n",
-            "Specific Element: \n",
-            " tf.Tensor(1.0, shape=(), dtype=float32)\n",
-            "Sliced Tensor: \n",
-            " tf.Tensor([2. 4.], shape=(2,), dtype=float32)\n",
-            "Tensor: \n",
-            " tf.Tensor([1. 2.], shape=(2,), dtype=float32)\n",
-            "Broadcasted Result: \n",
-            " tf.Tensor(\n",
-            "[[2. 4.]\n",
-            " [4. 6.]], shape=(2, 2), dtype=float32)\n"
+            "Constant Tensor: \n",
+            " tf.Tensor([1 2 3 4 5], shape=(5,), dtype=int32)\n",
+            "Variable tensor: \n",
+            " <tf.Variable 'Variable:0' shape=(3, 3) dtype=float32, numpy=\n",
+            "array([[-1.479272  , -1.05535   ,  0.03618637],\n",
+            "       [-0.82575643, -1.1015329 , -0.03127663],\n",
+            "       [-0.31606817, -1.6631627 ,  0.7073712 ]], dtype=float32)>\n",
+            "Updated variable tensor: \n",
+            " <tf.Variable 'Variable:0' shape=(3, 3) dtype=float32, numpy=\n",
+            "array([[ 0.13035488, -0.8309468 , -0.7236343 ],\n",
+            "       [-0.24188647,  0.18899505,  0.73742455],\n",
+            "       [-0.71270734, -0.1760225 ,  1.3159122 ]], dtype=float32)>\n",
+            "tf.Tensor(\n",
+            "[[1. 2. 3.]\n",
+            " [4. 5. 6.]], shape=(2, 3), dtype=float32)\n",
+            "tf.Tensor(\n",
+            "[[ 1.  4.  9.]\n",
+            " [16. 25. 36.]], shape=(2, 3), dtype=float32)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "V01ljPht18tI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
